# ZeroTestApp

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/apps/: CMakeLists.txt
src/apps/client/: CMakeLists.txt  main.cpp
src/apps/server/: CMakeLists.txt  DMAManager.cpp  DMAManager.h  DmaData.cpp  DmaData.h  DmaMasterApp.cpp  DmaMasterApp.h  Socket.cpp  Socket.h  main.cpp
src/lib/client/: CMakeLists.txt
src/lib/server/: CMakeLists.txt
